--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,51 @@
 ---
-
+import Layout from "@/layouts/Layout.astro";
+import Header from "@/components/Header.astro";
+import { getSession } from "auth-astro/server";
+import HeroImage from "@/components/HeroImage.astro";
+import ButtonChat from "@/components/ButtonChat.astro";
+const session = await getSession(Astro.request);
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="Bienvenido a Deache Chat">
+	<Header />
+	<main class="flex items-center justify-center h-auto">
+		<div
+			class="container mx-auto px-6 py-12 grid grid-cols-1 md:grid-cols-2 gap-8 items-center"
+		>
+			<div class="text-center md:text-left">
+				<h1
+					class="text-4xl font-bold mb-6 text-[#49BC97] dark:text-[#49BC97] uppercase"
+				>
+					¡Bienvenido al Chatbot Universitario!
+				</h1>
+				<p
+					class="text-lg mb-8 text-gray-700 dark:text-gray-300 text-wrap w-80"
+				>
+					Tu asistente virtual para todas las consultas y dudas
+					universitarias que tengas.
+				</p>
+				{
+					session ? (
+						<ButtonChat
+							text="Ir a mi chat"
+							class="bg-[#49BC97] text-white px-6 py-3 rounded-lg shadow hover:bg-[#3A9478] font-semibold dark:text-slate-800"
+							href="/chat"
+						/>
+					) : (
+						<ButtonChat
+							text="Quiero Comenzar!"
+							class="bg-[#49BC97] text-white px-6 py-3 rounded-lg shadow hover:bg-[#3A9478] font-semibold dark:text-slate-800"
+							href="/auth"
+						/>
+					)
+				}
+			</div>
+			<div class="flex justify-center md:justify-end">
+				<HeroImage class:list={"bg-slate-200 rounded-lg"} />
+			</div>
+		</div>
+	</main>
+</Layout>
+
+<style></style>
