fixed: convert to simple LP

--- a/src/pages/auth.astro
+++ b/src/pages/auth.astro
@@ -21,7 +21,7 @@ const session = await getSession(Astro.request);
                     <ButtonChat
                         text="Ir a mi chat"
                         class="bg-[#49BC97] px-6 py-3 rounded-lg hover:bg-[#3A9478] font-semibold text-white"
-                        href="/chat"
+                        href="https://deache.streamlit.app/"
                     />
                 </>
             ) : (
