fixed: convert to simple LP

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ session != null ? (status_session = "relative") : (status_session = "hidden");
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
         <div class="text-2xl font-bold xs:text-lg">
             <a href="/">
-                <img src="logo.svg" alt="Logo" class="h-11 inline-block mr-2" />
+                <img src="logo.svg" alt="Logo" class="h-11 inline-block mr-2 bg-slate-800 rounded-full w-11 p-1" />
                 DEACHE CHAT
             </a>
         </div>
